# jareds-videos

./: .env.example  .gitignore  README.md  pyproject.toml
src/jareds_videos/: __init__.py  config.py  video_generator.py
